<resources>
    <string name="app_name">Agriculture</string>
    <string name="prod_image">prod_image</string>
    <string name="vegetableName">vegetableName</string>
    <string name="vegetablePrice">vegetablePrice</string>
    <string name="AddVegetable">AddVegetable</string>
    <string name="upi_id">upi_id</string>
    <string name="quantity">quantity</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="todo">TODO</string>
    <string name="search_here">Search Here...</string>



    <string name="we_will_send_you_an_otp_on_this_given_mobile_number">We will send you an OTP on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_91">+91</string>
    <string name="title_activity_dashboard">dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="scrolltext">The word modern farming means the use of modern technologies,
    techniques and science for increasing farming productions.
    Farming plays an important role in the development of human civilization.
        Prior to the industrial revolution, most of those people used to do farming for
    their daily basic needs like food, clothing, and shelter.
    They had no idea of world marketplace and used to have very low production due
    to use of traditional farming methods. But now the things have changed.
        Development of agriculture and farming technology has greatly increased the farming
    productivity. Various types of modern farming methods which are used nowadays are
    agribusiness, intensive farming, organic farming, and sustainable agriculture, etc.
    Farmers are now able to buy and sell their products in the world markets.With the
    increased use of pesticides with synthetic nitrogen, mechanization and mined rock
    phosphate, the crop production has greatly increased.
        It has channelized green revolution
    in cereal production like rice, wheat, corn etc. Previously, farmers used to plough to dig
    the soil. On the other hand, farmers these days use modern equipment like multi facilities
    tractor to dig the soil. In the past farmers were dependent on natural weather conditions and
    fertilizers and used to have very low productivity.
        Now the things have changed, with the use
    of synthetic fertilizers,high productive breeds, farming productivity has increased a lot.
    As we all know, world population is increasing rapidly. We need more products like food, cloth etc.
    which totally depends on farming production. As a result, we need more production in farming which
    is quite difficult in traditional farming. Hence, modern farming is a must to get more production according to rapid population growth.</string>

    <string name="hyperlink">
        <a href="https://www.india.gov.in/website-ministry-agriculture-farmers-welfare/"> Ministry of Agriculture and Farmers Welfare </a>
    </string>

    <string name="hl1">
        <a href="https://www.india.gov.in/departments-agriculture-states-and-union-territories/"> Departments of Agriculture of states and Union Territories  </a>
    </string>

    <string name="hl2">
        <a href="https://www.india.gov.in/website-department-animal-husbandry-dairying-and-fisheries-0"> Department of Animal Husbandry Dairying and Fisheries  </a>
    </string>

    <string name="hl3">
        <a href="https://www.india.gov.in/farmers-portal"> Farmers Portal  </a>
    </string>

    <string name="gs1">
        <a href="https://pmksy.gov.in/"> Pradhan Mantri Krishi Sinchayee Yojana  </a>
    </string>

    <string name="gs2">
        <a href="https://pmfby.gov.in/"> Pradhan Mantri Fasal Bima Yojana </a>
    </string>

    <string name="gs3">
        <a href="https://sbi.co.in/web/agri-rural/agriculture-banking/crop-loan/kisan-credit-card"> Kisan Credit Card </a>
    </string>

    <string name="gs4">
        <a href="https://www.myscheme.gov.in/schemes/pmkmy"> Pradhan Mantri Kisan Maan-Dhan Yojana </a>
    </string>

    <string name="gs5">
        <a href="https://www.myscheme.gov.in/schemes/pkvy"> Paramparagat Krishi Vikas Yojana </a>
    </string>

    <string name="gs6">
        <a href="https://bgvb.in/Gramin-Bhandaran-Yojana.aspx"> Gramin Bhandaran Yojana </a>
    </string>

    <string name="gs7">
        <a href="https://pmkisan.gov.in/"> Pradhan Mantri Kisan Samman Nidhi Yojana </a>
    </string>

    <string name="gs8">
        <a href="https://www.enam.gov.in/web/"> National Agriculture Market (eNAM) </a>
    </string>

    <string name="gs9">
        <a href="https://vikaspedia.in/agriculture/agri-credit/interest-subvention-scheme-for-farmers"> Interest Subvention Scheme </a>
    </string>

        <string name="navigation_drawer_open">Open Navigation Drawer</string>
        <string name="navigation_drawer_close">Close Navigation Drawer</string>


</resources>